--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/sitemap": "^2.4.0",
+    "chart.js": "^2.9.4",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-property-decorator": "^2.9.1",
     "vue": "^2.6.14",
+    "vue-chartjs": "^3.5.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
